src/objects/Totango_Engagement__c.object
<CustomObject>
    <description>Houses store activity by clients</description>
    <fields>
        <fullName>Initial_Totango_Score__c</fullName>
        <label>Initial Totango Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MBA_Account_ID__c</fullName>
        <formula>Subscription__r.MBAAccountID__c</formula>
        <label>MBA Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MBA_Subscription_ID__c</fullName>
        <formula>Subscription__r.MBASubscriptionID__c</formula>
        <label>MBA Subscription ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Product__c</fullName>
        <formula>Subscription__r.New_Product_Plan__c</formula>
        <label>Subscription Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Status__c</fullName>
        <formula>TEXT(Subscription__r.Status__c)</formula>
        <label>Subscription Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription__c</fullName>
        <label>Subscription</label>
        <referenceTo>Subscription__c</referenceTo>
        <relationshipLabel>Totango Engagements</relationshipLabel>
        <relationshipName>Totango_Engagements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>TotangoActive_users_last_14_days__c</fullName>
        <label>Totango Active users (last 14 days)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotangoEngagementChange__c</fullName>
        <label>Totango Engagement Change</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotangoEngagement__c</fullName>
        <defaultValue>NULL</defaultValue>
        <label>Totango Engagement</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotangoInsights__c</fullName>
        <label>Totango Insights</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Totango_Account_Health_Icon__c</fullName>
        <formula>IMAGE( CASE( Totango_Account_Health__c , &quot;Good&quot;, &apos;https://app.totango.com/images/health/circle-green.png&apos;, &quot;Average&quot;, &apos;https://app.totango.com/images/health/circle-yellow.png&apos;, &quot;Poor&quot;, &apos;https://app.totango.com/images/health/circle-red.png&apos;, &apos;&apos;), &quot;&quot;,15,15)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Totango Account Health Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Totango_Account_Health_Reason__c</fullName>
        <label>Totango Account Health Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Totango_Account_Health__c</fullName>
        <label>Totango Account Health</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Totango_Last_Update__c</fullName>
        <label>Totango Last Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Totango_Online_Status__c</fullName>
        <formula>IF( CONTAINS( Totango_isOnline__c , &quot;totango&quot;), IMAGE( Totango_isOnline__c, &quot;N/A&quot;) , IMAGE(&quot;https://app.totango.com/images/emptyPixel.png&quot;,&quot;N/A&quot;))</formula>
        <label>Totango Online Status Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Totango_Status__c</fullName>
        <formula>TEXT(Subscription__r.Status__c)&amp;&quot; &quot;&amp; Subscription__r.Product__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Totango Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Totango_URL__c</fullName>
        <label>Totango URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Totango_isOnline__c</fullName>
        <label>Totango Online Status</label>
        <type>Url</type>
    </fields>
    <label>Totango Engagement</label>
    <nameField>
        <displayFormat>TE-{0000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Totango Engagements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>